--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,13 @@ Thumbs.db
 .env
 .env.local
 
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+report.html
+report.json
+bandit-report.json
+coverage.xml
+
