--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 jobs:
   test-summary:
     runs-on: ubuntu-latest
@@ -13,7 +18,7 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
     
@@ -43,11 +48,17 @@ jobs:
     
     - name: Comment PR with test results
       if: always() && github.event_name == 'pull_request'
-      uses: actions/github-script@v6
+      uses: actions/github-script@v7
+      continue-on-error: true
       with:
         script: |
           const fs = require('fs');
           try {
+            if (!fs.existsSync('report.json')) {
+              console.log('report.json not found, skipping comment');
+              return;
+            }
+            
             const report = JSON.parse(fs.readFileSync('report.json', 'utf8'));
             const summary = report.summary;
             
@@ -62,14 +73,14 @@ jobs:
             ${summary.failed > 0 ? '❌ **Some tests failed!**' : '✅ **All tests passed!**'}
             `;
             
-            github.rest.issues.createComment({
+            await github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: body
             });
           } catch (error) {
-            console.log('Could not read test report:', error);
+            console.log('Could not create comment:', error.message);
           }
 
   security-check:
@@ -80,7 +91,7 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
     
