--- a/.github/workflows/quick-check.yml
+++ b/.github/workflows/quick-check.yml
@@ -7,6 +7,9 @@ on:
       - master
       - main
 
+permissions:
+  contents: read
+
 jobs:
   quick-test:
     runs-on: ubuntu-latest
@@ -17,7 +20,7 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
         cache: 'pip'
